--- a/Anchor.toml
+++ b/Anchor.toml
@@ -4,14 +4,14 @@
 seeds = false
 skip-lint = false
 
-[programs.localnet]
+[programs.devnet]
 solana_dao = "HQNsBk3UiLkQQEDr9qEBs3PC1AhPNeYGfh1WyNhLW5Tx"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "devnet"
 wallet = "/home/user/.config/solana/id.json"
 
 [scripts]
